feat: :sparkles: To do list

--- a/ToDoApp/FrontEnd/Components/Pages/ToDoList.razor
+++ b/ToDoApp/FrontEnd/Components/Pages/ToDoList.razor
@@ -1,7 +1,49 @@
 ﻿@page "/todolist"
 
-<h3>ToDoList</h3>
+@rendermode InteractiveServer
+
+<h3>To Do</h3>
+<br />
+
+<button class="btn btn-primary" @onclick="AddTask">Add To Do</button>
+
+@if (items != null)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Is Done</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in items)
+            {
+                <tr @key="item.Id">
+                    <td>@item.Id</td>
+                    <td>@item.Name</td>
+                    <td>@item.IsCompleted</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else if (items != null && items.Count == 0)
+{
+    <p><em>No items!</em></p>
+}
+else
+{
+    <p><em>Loading...</em></p>
+}
 
 @code {
-
+    private List<ToDoItem> items = ToDoItemsRepository.GetItems();
+    
+    private void AddTask()
+    {
+        ToDoItemsRepository.AddItem(new ToDoItem { Name = "New Task", IsCompleted = false });
+        items = ToDoItemsRepository.GetItems();
+    }
 }
